[gd_scene load_steps=8 format=3 uid="uid://c8yam2qsapqco"]

[ext_resource type="Texture2D" uid="uid://bg5x9m2qsapqco" path="res://assets/Menu/Background.png" id="1_background"]
[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="2_main_menu_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.102, 0.0902, 0.0824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.251, 0.22, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.125, 0.11, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.459, 0.176, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.145, 0.125, 0.11, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.498, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_disabled"]
bg_color = Color(0.102, 0.0902, 0.0824, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.149, 0.129, 0.122, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_main_menu_script")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1_background")
stretch_mode = 1

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0509804, 0.0392157, 0.0392157, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 600)

[node name="TopSpacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.753, 0.651, 1)
theme_override_font_sizes/font_size = 64
text = "DAGGERFALL CLONE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.4, 0.1, 0.8)
theme_override_font_sizes/font_size = 18
text = "A Classic Dungeon Crawler Experience"
horizontal_alignment = 1

[node name="MenuSpacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(300, 0)
theme_override_constants/separation = 20

[node name="SinglePlayerButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
theme_override_colors/font_color = Color(0.8, 0.753, 0.651, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.4, 0.1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.498, 0.2, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "SINGLE PLAYER"

[node name="MultiplayerButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
theme_override_colors/font_color = Color(0.291, 0.271, 0.247, 1)
theme_override_colors/font_disabled_color = Color(0.291, 0.271, 0.247, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_disabled")
theme_override_styles/disabled = SubResource("StyleBoxFlat_disabled")
text = "MULTIPLAYER"
disabled = true

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
theme_override_colors/font_color = Color(0.291, 0.271, 0.247, 1)
theme_override_colors/font_disabled_color = Color(0.291, 0.271, 0.247, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_disabled")
theme_override_styles/disabled = SubResource("StyleBoxFlat_disabled")
text = "SETTINGS"
disabled = true

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
theme_override_colors/font_color = Color(0.8, 0.753, 0.651, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.4, 0.1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.498, 0.2, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
text = "QUIT GAME"

[node name="BottomSpacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.291, 0.271, 0.247, 0.6)
theme_override_font_sizes/font_size = 12
text = "Development Build - Phase 2"
horizontal_alignment = 2
